# tinderbox-mcp

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
applescripts/: create_note.scpt  get_children.scpt  get_links.scpt  get_siblings.scpt  link_notes.scpt  read_note.scpt  update_attribute.scpt
src/: index.ts  server.py
